Make nodes parameters optional
